--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     </div>
                     <div class="hero-buttons">
                         <button class="primary-btn">Launch App</button>
-                        <button class="secondary-btn">Documentation</button>
+                         <a href="https://docs.lunaracoin.com/" target="_blank" rel="noopener noreferrer"><button class="secondary-btn">Documentation</button></a>
                     </div>
                 </div>
                 <div class="hero-image">
@@ -492,7 +492,7 @@
                             </div>
                             <div class="footer-section">
                                 <h4>Resources</h4>
-                                <a href="javascript:void(0)" class="social-link">Gitbook</a>
+                                <a href="https://docs.lunaracoin.com/" target="_blank" rel="noopener noreferrer">Gitbook</a>
                             </div>
                         </div>
                     </div>
